fix home layout problem, add rates function

--- a/static/rental.css
+++ b/static/rental.css
@@ -7,7 +7,7 @@ body{
 }
 /*guide bar on the top*/
 .navBar {
-	height: 75px;
+	height: 19vh;
 	width:100%;
 	background-color:#0A2861;
 	position:fixed;
@@ -23,9 +23,9 @@ body{
 }
 .navBar ul{
 	position: absolute;
-    left: 62px;
-    width: 60%;
-    display: inline-block;
+	left: 2.5%;
+	width: 64%;
+	display: inline-block;
 }
 .navBar li{
 	display: inline-block;
@@ -44,8 +44,8 @@ body{
 }
 .navBar button{
 	position: absolute;
-    right: 20%;
-    margin-top: 10px;
+	right: 10%;
+	margin-top: 10px;
 }
 @media screen and (max-width: 640px){
 	ul li{
@@ -62,7 +62,7 @@ body{
 	right: 10%;
 	text-align:left;
 	grid-area: address;
-	width:500px;
+	width: 30vw;
 }
 #address{
 	width:300px;
@@ -80,7 +80,8 @@ body{
 	grid-column-gap: 15%;
 	grid-row-gap: 50px;
 	grid-template-areas:
-		'gallery address'
+		'gallery address';
+	margin-top: -7px;
 }
 #facilities{
 	grid-area:facilities;
